Fixing the accordion header to only show the scrollbar if needed

--- a/src/main/frontend/src/scss/custom.scss
+++ b/src/main/frontend/src/scss/custom.scss
@@ -29,7 +29,7 @@ a:active {
 }
 
 .accordion .card-header, .overflow-scroll {
-	overflow: scroll;
+	overflow: auto;
 }
 
 .agenda--date {
